# projekt_zaliczenie

./: CMakeLists.txt  Projekt_zaliczenie.c  README.md  bmp280_i2c.c
RPi-Pico-SD-Card-Module-main/: CMakeLists.txt  main.cpp
RPi-Pico-SD-Card-Module-main/lib/: CMakeLists.txt  data_logger.cpp  data_logger.h
lib/: CMakeLists.txt  hw_config.c
